src/snapshots/fmtt__tests__abbr.snap
---
source: src/tests.rs
expression: "&formatted"
---
I asked (emailed Prof. He Who Must Not Be Named and CCed Prof. YouKnowWho).
The former has a budget of 7500, and the latter 5000.
