src/snapshots/fmtt__tests__long_link.snap
---
source: src/tests.rs
expression: "&formatted"
---
[![YouTube
icon](https://www.gstatic.com/youtube/img/branding/youtubelogo/svg/youtubelogo.svg)
Channel](https://www.youtube.com/@sichanghe)
