src/snapshots/fmtt__tests__many_commas.snap
---
source: src/tests.rs
expression: "&formatted"
---
For a color with linear red, green, blue values $r,g,b\in[0,1]$,
hue $h\in[0,360)$, saturation $s\in[0,1]$, lightness $l\in[0,1]$,
and grayscale $p\in[0,1]$:
